err/python-roboticeclient.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-0.11.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_roboticeclient-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.5.1.dist-info'...
Listing './lib/python3.5/site-packages/roboticeclient'...
Listing './lib/python3.5/site-packages/roboticeclient/common'...
Compiling './lib/python3.5/site-packages/roboticeclient/common/django.py'...
***   File "./lib/python3.5/site-packages/roboticeclient/common/django.py", line 40
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/roboticeclient/common/horizon.py'...
***   File "./lib/python3.5/site-packages/roboticeclient/common/horizon.py", line 40
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/roboticeclient/control'...
Compiling './lib/python3.5/site-packages/roboticeclient/control/shell.py'...
***   File "./lib/python3.5/site-packages/roboticeclient/control/shell.py", line 102
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/roboticeclient/control/v1'...
Listing './lib/python3.5/site-packages/roboticeclient/control/v1/managers'...
Compiling './lib/python3.5/site-packages/roboticeclient/control/v1/managers/tasks.py'...
***   File "./lib/python3.5/site-packages/roboticeclient/control/v1/managers/tasks.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/roboticeclient/robotice'...
Compiling './lib/python3.5/site-packages/roboticeclient/robotice/shell.py'...
***   File "./lib/python3.5/site-packages/roboticeclient/robotice/shell.py", line 102
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/roboticeclient/robotice/v1'...
Listing './lib/python3.5/site-packages/roboticeclient/robotice/v1/managers'...
Compiling './lib/python3.5/site-packages/roboticeclient/robotice/v1/managers/tasks.py'...
***   File "./lib/python3.5/site-packages/roboticeclient/robotice/v1/managers/tasks.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/roboticeclient/utils'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
